Bug 159931 - Exported pptx cannot be opened in PowerPoint because a referenced part does not exist
Summary: Exported pptx cannot be opened in PowerPoint because a referenced part does n...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.6.5.2 release
Hardware: All All
: high normal
Assignee: Sarper Akdemir (allotropia)
URL:
Whiteboard: target:24.8.0 target:24.2.2.2 target:...
Keywords: bibisected, bisected, regression
: 159984 160240 (view as bug list)
Depends on:
Blocks: PPTX-Corrupted PPTX-MasterSlide
  Show dependency treegraph
 
Reported: 2024-02-27 23:36 UTC by Regina Henschel
Modified: 2024-03-19 17:51 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
File used in the unit test (18.85 KB, application/vnd.oasis.opendocument.presentation)
2024-02-27 23:36 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2024-02-27 23:36:53 UTC
Created attachment 192836 [details]
File used in the unit test

Open the file https://opengrok.libreoffice.org/xref/core/sd/qa/unit/data/odp/repeatBitmapMode.odp and save it to pptx format.
Open the saved file in PowerPoint.
Error: PowerPoint cannot open the file and wants to repair it.
Open XML SDK 2.5 Productivity Tool cannot open the file because a referenced part is missing. And indeed ppt\slides\_rels\slide1.xml.rels references for rId2
Target="../slideLayouts/slideLayout0.xml which does not exist.

The file is used in test "testRepeatBitmapMode".

The file is correctly exported in Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: e19e193f88cd6c0525a17fb7a176ed8e6a3e2aa1
CPU threads: 32; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded

I see the error in Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 39048e0c0e9af455197ff57cc2947f8fb23e8542
CPU threads: 32; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded
Comment 1 m_a_riosv 2024-02-27 23:53:46 UTC
It also fails with:
Version: 24.2.1.1 (X86_64) / LibreOffice Community
Build ID: 359ef544e625d2ffbfced462ab37bd593ca85fa7
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 2 Aron Budea 2024-03-04 04:15:09 UTC
I bibisected the change when 'slideLayout0.xml' first exists in the unzipped output PPTX using repo bibisect-linux-64-24.2 (haven't tested the result in PP), and it is the 24.2 backport of the following commit. Adding CC: to Balazs Varga.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=bff76421e234df7246a7f49c71a11432f86e09d1
author		Balazs Varga <balazs.varga.extern@allotropia.de>	2023-12-03 23:41:01 +0100
committer	Balazs Varga <balazs.varga.extern@allotropia.de>	2023-12-18 15:10:54 +0100

tdf#157740 FILESAVE PPTX: fix explosion of the number of master slides
Comment 3 Balázs Varga 2024-03-04 22:17:04 UTC
(In reply to Aron Budea from comment #2)
> I bibisected the change when 'slideLayout0.xml' first exists in the unzipped
> output PPTX using repo bibisect-linux-64-24.2 (haven't tested the result in
> PP), and it is the 24.2 backport of the following commit. Adding CC: to
> Balazs Varga.
> 
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=bff76421e234df7246a7f49c71a11432f86e09d1
> author		Balazs Varga <balazs.varga.extern@allotropia.de>	2023-12-03 23:41:01
> +0100
> committer	Balazs Varga <balazs.varga.extern@allotropia.de>	2023-12-18
> 15:10:54 +0100
> 
> tdf#157740 FILESAVE PPTX: fix explosion of the number of master slides

Will take a look at tmr. Thanks for the bibisect and infos.
Comment 4 Commit Notification 2024-03-07 14:08:16 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6c25216e461b624f556a1b2830ab0911d5df7daf

tdf#159931: pptx export: export each used slide layout for a master

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-03-10 12:57:43 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/a8f058e8ab02643ac2c8d6b6d8fcb3ab45fcf79f

tdf#159931: pptx export: export each used slide layout for a master

It will be available in 7.6.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-03-10 12:58:47 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/ebd9530b458cbc37a7b2b1da077435f2b33081ba

tdf#159931: pptx export: export each used slide layout for a master

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Regina Henschel 2024-03-17 14:10:41 UTC
*** Bug 159984 has been marked as a duplicate of this bug. ***
Comment 8 Regina Henschel 2024-03-17 14:12:23 UTC
*** Bug 160240 has been marked as a duplicate of this bug. ***
Comment 9 Commit Notification 2024-03-19 17:04:04 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "libreoffice-7-6-6":

https://git.libreoffice.org/core/commit/a20c366364bdfea41bd9063bd8801d5bb59c0092

tdf#159931: pptx export: export each used slide layout for a master

It will be available in 7.6.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2024-03-19 17:51:24 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-2":

https://git.libreoffice.org/core/commit/aa371949ae72e84379ae811e469d9ec34bab6ec5

tdf#159931: pptx export: export each used slide layout for a master

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.