tdf#159931: pptx export: export each used slide layout for a master

attempts to fix the slideLayout reference related regression
from Idb6b88ebe87a83818d8eb27a1fa087652a002c0c.

To correctly export the all used slideLayout instances for a
given master, iterate through sdr::PageUsers of that master
and figure out all used layouts.

Change-Id: I0f58befac1ba4d5ec01aeedbb5f611c83683dcf8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164468
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
Reviewed-by: Sarper Akdemir <sarper.akdemir.extern@allotropia.de>
(cherry picked from commit a35831becee3781daf8628c48944660d31d84d8b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164542
(cherry picked from commit a8f058e8ab02643ac2c8d6b6d8fcb3ab45fcf79f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164640
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Aron Budea <aron.budea@collabora.com>